apps/sample-nodejs-app/carvel/pkg-v2.1/config/elastic.yaml
#@ load("@ytt:data", "data")
---
kind: Service
apiVersion: v1
metadata:
  name: elastic-svc
  namespace: #@ "{}".format(data.values.namespace)
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  type: ClusterIP
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: inter-node
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: #@ "{}".format(data.values.namespace)
  labels:
    app: elasticsearch
spec:
  serviceName: elasticsearch
  replicas: 1
  volumeClaimTemplates: []
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: projects.registry.vmware.com/tanzu_meta_pocs/sample-app/elasticsearch:7.2.1
        resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
        ports:
        - containerPort: 9200
          name: rest
          protocol: TCP
        - containerPort: 9300
          name: inter-node
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
      volumes:
      - name: data
        emptyDir: {}
