apps/sample-nodejs-app/carvel/pkg-v2.1/config/mongo.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo-svc
  namespace: #@ "{}".format(data.values.namespace)
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo
  name: mongo
  namespace: #@ "{}".format(data.values.namespace)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  strategy: {}
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - image: projects.registry.vmware.com/tanzu_meta_pocs/sample-app/mongo:latest
        name: mongo
        args: ["--dbpath","/data/db"]
        volumeMounts:
        - name: "mongo-data-dir"
          mountPath: "/data/db"
      volumes:
      - name: "mongo-data-dir"
        emptyDir: {}
