apps/sample-nodejs-app/carvel/pkg-v2.1/config/sample-app-v1.1.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nodejs-app-deployment-v1.1
  namespace: #@ "{}".format(data.values.namespace)
spec:
  selector:
    matchLabels:
      app: test-nodejs-app
      version: v1
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: nodejs-data
      labels:
        app: test-nodejs-app
        version: v1
    spec:
      serviceAccountName: #@ "{}".format(data.values.app.service_account)
      containers:
      - name: my-apps
        image: projects.registry.vmware.com/tanzu_meta_pocs/sample-app/sample-app:v0.3.27
        volumeMounts:
        - mountPath: /appdir
          name: nodejs-data
        - mountPath: /bindings/redis-claim
          name: redis-creds
        - mountPath: /bindings/postgres-claim
          name: postgres-creds
        - mountPath: /bindings/mysql-claim
          name: mysql-creds
        - mountPath: /bindings/mongo-claim
          name: mongo-creds
        - mountPath: /bindings/elastic-claim
          name: elastic-creds
        - mountPath: /bindings/rbmq-claim
          name: rbmq-creds
        ports:
        - containerPort: 8080
      volumes:
      - name: nodejs-data
        emptyDir: {}
      - name: redis-creds
        secret:
          secretName: redis-creds
      - name: postgres-creds
        secret:
          secretName: postgres-creds
      - name: mysql-creds
        secret:
          secretName: mysql-creds
      - name: mongo-creds
        secret:
          secretName: mongo-creds
      - name: elastic-creds
        secret:
          secretName: elastic-creds
      - name: rbmq-creds
        secret:
          secretName: rbmq-creds
---
apiVersion: v1
kind: Service
metadata:
  name: test-nodejs-app
  namespace: #@ "{}".format(data.values.namespace)
  labels:
    app: test-nodejs-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: test-nodejs-app
  type: #@ "{}".format(data.values.app.service_type)
---
#@ if(hasattr(data.values.app, "ingress_domain")):
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: sample-app-nodejs
  namespace: #@ "{}".format(data.values.namespace)
spec:
  #@ if(data.values.app.ingress_class_name != ""):
  ingressClassName: #@ "{}".format(data.values.app.ingress_class_name)
  #@ end
  routes:
  - conditions:
    - prefix: /
    enableWebsockets: true
    services:
    - name: test-nodejs-app
      port: 80
  virtualhost:
    fqdn: #@ "sample-app-binding.{}".format(data.values.app.ingress_domain)
#@ end
